<resources>
    <string name="app_name">Get My Parking</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Where do you want to park?</string>
    <string name="navigate">Navigate</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="pricing">Pricing</string>
    <string name="bike">Bike</string>
    <string name="car">Car</string>
    <string name="capacity">Capacity</string>
    <string name="personal_details">Personal Details</string>
    <string name="vehicals">Vehicle</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="done">Done</string>
    <string name="book_now">Book Now</string>
    <string name="service_on_wheel">Service on Wheels</string>
    <string name="location">Location</string>
    <string name="hours">Hours</string>
    <string name="total_price">Total Price</string>
    <string name="proceed">Proceed</string>
    <string name="commercial">Commercial</string>
    <string name="n_a">N/A</string>
    <string name="total_price_value">₹ %1$s</string>
    <string name="payment_type">Payment Type</string>
    <string name="other_details">Other Details</string>
    <string name="parking_type">Parking Type</string>
    <string name="ownership">Ownership</string>
    <string name="structure">Structure</string>
    <string name="cctv_installed">CCTV installed</string>
    <string name="ticketing_system">Ticketing system</string>
    <string name="payment_at">Payment At</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="no_result_found">No result found</string>
    <string name="car_sanitization_and_cleanup">Car Sanitization and Cleanup</string>
    <string name="car_wash">Car Wash</string>
    <string name="regular_periodic_maintenance">Regular Periodic Maintenance</string>
    <string name="free_service_for_new_car">Free Service for New Car</string>
    <string name="car_sanitization_price">₹ 500</string>
    <string name="car_Wash_price">₹ 100</string>
    <string name="regular_maintenance_price">Prices as per kilometers</string>
    <string name="summary">Summary</string>
    <string name="problem_tag">In case of any problems or cancellations, please contact care@getmyparking.com. Maruti Suzuki is providing this digital service as an aggregator in partnership with other vendors and does not operate the parking on ground. Local parking operator is responsible for the operations inside their parking lot. </string>
    <string name="SOW_description">Nearest service provider will call you to arrange for your selected service</string>
    <string name="car_sanitization_desc">Thorough cleaning from inside out (60 mins)</string>
    <string name="car_wash_desc">Dry wash from outside (20 mins)</string>
    <string name="regular_maintainance_desc">List of services as per KMs driven (variable)</string>
    <string name="customer_support">Customer Support</string>
    <string name="pay">Pay</string>
    <string name="save">Save</string>
    <string name="none">None</string>
    <string name="click_to_add_vehicles">Click + to Add Vehicles</string>

</resources>