<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.fragments.BookingFragment">

    <RelativeLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/toolbar_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/page_margin"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_arrow_back_black" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/page_margin">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_grey"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/page_margin">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:backgroundTint="@color/primary_theme"
                        android:src="@drawable/ic_filled_location_on_blue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/img_info"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:backgroundTint="@color/primary_theme"
                        android:src="@drawable/ic_filled_info_blue"
                        app:layout_constraintBottom_toBottomOf="@+id/textView2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView2"/>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/location"
                        android:textAppearance="@style/text_header"
                        android:textColor="@color/primary_theme"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="@+id/imageView" />

                    <TextView
                        android:id="@+id/txt_parking_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Parking Name"
                        android:textAppearance="@style/text_header"
                        android:textColor="@color/text_grey"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <TextView
                        android:id="@+id/txt_city_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="City Name"
                        android:textAppearance="@style/text_regular"
                        android:textColor="@color/text_grey"
                        android:textSize="10sp"
                        app:layout_constraintStart_toStartOf="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/txt_parking_name"
                        tools:ignore="SmallSp" />


                    <TextView
                        android:id="@+id/txt_opening_hours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/opening_hours"
                        android:textAppearance="@style/text_header"
                        android:textColor="@color/text_grey"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="@+id/txt_city_name"
                        app:layout_constraintTop_toBottomOf="@+id/txt_city_name" />

                    <TextView
                        android:id="@+id/txt_opening_hours_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="operating hours"
                        android:textAppearance="@style/text_regular"
                        android:textColor="@color/text_grey"
                        android:textSize="10sp"
                        app:layout_constraintStart_toStartOf="@+id/txt_opening_hours"
                        app:layout_constraintTop_toBottomOf="@+id/txt_opening_hours"
                        tools:ignore="SmallSp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/txt_vehicle_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Vehicle"
                android:textAppearance="@style/text_header"
                android:textColor="@color/primary_theme"
                app:layout_constraintStart_toStartOf="@+id/materialCardView2"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView2" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_vehicleType"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:boxBackgroundColor="@color/bg_grey"
                app:hintTextAppearance="@style/text_regular"
                app:layout_constraintStart_toStartOf="@+id/txt_vehicle_heading"
                app:layout_constraintTop_toBottomOf="@+id/txt_vehicle_heading">

                <AutoCompleteTextView
                    android:id="@+id/autoComplete_vehicleType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/txt_hours_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Hours"
                android:textAppearance="@style/text_header"
                android:textColor="@color/primary_theme"
                app:layout_constraintStart_toStartOf="@+id/txt_vehicle_heading"
                app:layout_constraintTop_toBottomOf="@+id/textInput_vehicleType" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_hours"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:boxBackgroundColor="@color/bg_grey"
                app:hintTextAppearance="@style/text_regular"
                app:layout_constraintTop_toBottomOf="@+id/txt_hours_heading"
                tools:layout_editor_absoluteX="20dp">

                <AutoCompleteTextView
                    android:id="@+id/autoComplete_hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_VAS_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/service_on_wheel"
                android:textAppearance="@style/text_header"
                android:textColor="@color/primary_theme"
                app:layout_constraintStart_toStartOf="@+id/textInput_hours"
                app:layout_constraintTop_toBottomOf="@+id/textInput_hours" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_VAS_heading">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <CheckBox
                        android:id="@+id/checkbox_cleanup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/car_sanitization_and_cleanup" />

                    <CheckBox
                        android:id="@+id/checkbox_wash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/primary_theme"
                        android:text="@string/car_wash" />

                    <CheckBox
                        android:id="@+id/checkbox_maintenance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/regular_periodic_maintenance" />


                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_booking_screen_bottom"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_price_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_price"
                android:textAppearance="@style/text_header" />

            <TextView
                android:id="@+id/txt_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="₹ 0.00"
                android:textAppearance="@style/text_header"
                android:textColor="@color/primary_theme"
                android:textSize="12sp"/>

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_proceed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proceed"
            android:textAllCaps="false"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"/>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>